--- a/网络通信协议总结.md
+++ b/网络通信协议总结.md
@@ -83,10 +83,50 @@ TCP协议为了保证顺序性，每个包都有一个ID，在建立连接的时
 而拥塞控制是通过拥塞窗口来解决的，相当于往管道里倒水，快了容易溢出，慢了浪费带宽，比较好的一种方式是，带宽满而缓存不满，这样使得时延较低。
 
 
+# 3.HTTP协议
+HTTP协议属于应用层协议。其报文大概分为3部分，请求行，首部，实体。
+
+第一部分，请求行：方法+url+版本。请求方法，主要有GET，POST，PUT，DELETE；版本选择多是1.1
+
+第二部分，首部：字段名+字段值，是key-value形式。如Accept,Content-Type，Cache-Control，Connection,Cookie,Host,Refer,User-Agent等。
+这里要重点说一下缓存，为什么要缓存呢？因为一个很大的页面会有很多东西。比如一个商品的详情页，会有价格、库存、图片、文字介绍等等。
+商品的展示图片可能会长时间不变，而库存会经常变换。如果图片很大，库存数很小，那我们每次更新数据都要刷新整个页面，对服务器的压力就很大。
+对于这种高并发下的系统，在真正的业务逻辑之前，要有一个接入层，将这些静态资源请求拦在外面。
+
+Cache-Control用来控制缓存，当包含max-age指令时，如果判定缓存层中，资源缓存时间值比指定的时间值小，那么客户端就可以接受缓存资源；当指定max-age值为0，那么缓存层通常需要将请求转发给应用集群。
+
+HTTP是基于TCP的，所以它使用面向连接的方式发送请求，但是HTTP本身是无连接、无状态的，因此一般浏览器会有cookie用于存储一些用户的状态使得浏览器可以识别用户，对于服务器而言会有一个session用来识别浏览器，因为cookie中存有一个sessionid。
+
+**HTTP通过stream二进制流的方式传给对方，当然到了TCP层，它会把二进制流调整变成一个报文段发送给服务器(所以说TCP是面向字节流的协议，可以对数据流进行动态调整，也可以积累足够多的字节流构成报文段发出去)。在发送给每个报文段的时候，都需要对方有一个回应ACK，来保证报文可靠传达。如果对方没有回应，那么TCP层会重新传输，直到可以到达。同一个包可能被传了很多次，但是HTTP层是不知道的，都是TCP层干的事。**
+
+**TCP层发送每一个报文的时候，都要加上自己的地址端口和目标端口，将这俩信息放到IP头里面，交给IP层传输。然后IP层会查看目标地址和自己是否在同一个局域网，如果是，就发送ARP协议来请求这个目标地址对应的MAC地址，然后将源MAC和目标MAC放入MAC头里面，发送出去；如果不在同一个局域网，就要发送到网关，还需要ARP协议来获取网关的MAC地址，然后将源MAC和网关MAC放入MAC头里，发送出去**
+
+**网关收到包发现MAC符合，就取出IP地址，根据路由协议找到下一跳的路由器，获取其MAC地址，将包发给下一跳路由器。这样路由器一跳又一跳终于到了目标局域网，此时最后一跳的路由器发现，目标地址就在自己的某一个出口局域网上。于是在这个局域网上发送ARP，获取这个目标地址的MAC地址，将包发出去。**
+
+**目标的机器发现MAC地址符合，就把包收下来；发现IP地址符合，就根据IP头中的各项协议，知道上一层是TCP协议，于是解析TCP的头，里面有序列号，这个时候需要看一下这个序列包是不是我要的，如果是就放入缓存中然后返回一个ACK，如果不是就丢弃**
+
+**TCP头里有端口号，HTTP的服务器正在监听这个端口号，于是目标机器自然就知道是HTTP服务器进程想要这个包，于是将包发给HTTP服务器。HTTP的服务器进程看到这个请求是要访问某一个网页，于是就把网页发给客户端。**
 
 
+HTTP返回，也是三部分：状态行+首部+实体。其中状态行包括版本、状态码、短语。状态码反映了HTTP的请求结果，200就是大吉大利，404就是找不到，500就是服务器挂了。然后短语大概说一下原因。
+
+**构造好了返回HTTP报文，接下来就会把它发出去，还是交给Socket去发送，还是交给TCP层，让TCP层将返回的HTML分成一个个小的段，这些段加上TCP头后交给IP层，然后把刚才请求报文的流程反向走一波，虽然两次不一定走相同的路径，但是逻辑过程是一样的，直到到达客户端。**
+
+**客户端发现MAC地址符合、IP地址符合，于是就交给TCP层，根据序列号看看是不是自己要的报文段，如果是则会根据TCP头中的端口号，发给相应的进程。这个进程就是浏览器，浏览器也是在监听某个端口的**
+
+**当浏览器拿到了HTTP的报文，发现状态码是200，就从正文中把HTML拿出来，HTML是一个标准的网页格式，浏览器根据这个格式就可以展示出一个bling~bling的网页。**
+
+以上就是一个正常的HTTP请求和响应的完整过程。
 
 
+**由于HTTP1.1在应用层以纯文本的形式进行通信，每次通信都要带着完整的HTTP头，如果不考虑pipeline模式的话，每次的过程都是像上面那样一去一回，这样在实时性、并发性上都有问题。**
+
+**于是就有了HTTP2.0，通过头压缩、分帧、二进制编码、多路复用等技术提升性能。HTTP2.0虽然大大增加了并发性，但是还有问题，因为仍然基于TCP协议，处理包时有严格的顺序，当有一个包遇到问题，TCP需要等这个包完成重传后才能继续传输。因此到了TCP切换到UDP的时候，这就是谷歌的QUIC协议。**
+
+**QUIC协议通过基于UDP自定义类似TCP的连接、重试、多路复用、流量控制等技术，进一步提升性能。**
+
+
+# 4.HTTPS协议
 
 
 
