--- a/网络通信协议总结.md
+++ b/网络通信协议总结.md
@@ -141,10 +141,10 @@ HTTPS协议采用的是非对称加密和对称加密相结合的方式进行通
 4. 服务端发送完成(好了，我这边信息发完了Done)
 5. 客户端进行证书校验，取出公钥，产生随机数c，然后将随机数采用公钥加密传输
 6. 客户端与服务端，分别通过a+b+c算出对称秘钥
-7. 客户端发送对称加密通知(用户就用对称秘钥传输啦)
+7. 客户端发送对称加密通知(以后就用对称秘钥传输啦)
 8. 客户端发送握手验证(先把之前咱们商量的参数加密传输试一下)
 9. 服务端发送对称加密通知(好的，以后就用对称秘钥传输数据)
-10. 服务端发送握手验证(先把之前咱们商量的参数加密传输试一下)
+10. 服务端发送握手验证(我也把之前咱们商量的参数加密传输试一下)
 11. 双方开启加密通信
 
 
