--- a/机器学习.md
+++ b/机器学习.md
@@ -35,7 +35,7 @@
 超参数不是通过学习出来的，而是开始指定的(尽管可以通过嵌套学习得出最优超参数)。而验证集则是用于挑选合适超参数的数据子集。
 
 **对于小数据集，可以采用k-折交叉验证算法**，将数据集分成k个不重合的子集，测试误差估计为k次计算后的平均测试误差。
-在第i次测试时，数据的第i个子集用于测试集。其他数据用于训练集。
+在第i次测试时，数据的第i个子集用于验证集。其他数据用于训练集。
 
 **3.最大似然估计**
 
