--- a/数据结构与算法学习笔记.md
+++ b/数据结构与算法学习笔记.md
@@ -1,1 +1,29 @@
 数据结构与算法，是编程的基础知识，同时也是编程能力进阶的核心知识点之一，因此有必要重学数据结构与算法，力求做到熟练使用，可以解决力扣中级难度题的程度
+
+# 1.数组
+
+**数组是一种线性表数据结构，用一组连续的内存空间，存储一组具有相同类型的数据**
+* 线性表：数据排成线一样的结构，线性表上的数据只有前、后2个方向。线性表包括数组、链表、队列、栈
+* 非线性表：数据间不是简单的前后关系，包括树、图、堆
+* 连续的内存空间和相同类型的数据：这保证了数组的**随机访问**特性，但是也导致了**低效的插入和删除**，需要做大量的数据搬移
+* 随机访问时间复杂度O(1),插入删除时间复杂度O(n)
+
+计算机会给每个内存单元分配一个地址，通过地址来访问内存中的数据，对一个数组而言，申请一块连续的内存空间，首地址为base_address，计算机访问数组中的某个元素，就是通过数组首地址base_address、该元素的位置i、元素大小data_type_size，计算出该元素的内存地址address = base_address + i * data_type_size
+
+*注意，数组的具有的O(1)时间复杂度特性的是随机访问，而不是查找*
+
+# 2.链表
+**链表与数组不同的是，并不需要一块连续的内存空间，而是通过指针将一组分散的内存块串联起来**
+* 常见的链表有：单链表、双向链表、循环链表
+* 链表除了包含数据外，还存储有指针，正是因为指针的存在，链表的头节点和尾节点比较特殊，访问元素从头节点开始，尾节点的next为null(单链表)
+* 随机访问时间复杂度O(n),插入删除时间复杂度O(1)
+* 循环链表是一种特殊的单链表，其尾节点指针指向头节点
+* 双向链表较为常用，和单链表的结构区别在于支持2个方向，每个节点包含后继指针next和前驱指针prev。
+
+双向链表所需存储空间比单链表大，但是在指定节点的条件下，插入删除都是O(1)时间复杂度，而单链表则需要从头查找是O(n)时间复杂度。另外对于一个有序链表，双向链表按值查询的效率也更高，因为可以存储上次查找的位置p，然后根据目标值与p的大小决定向前还是向后查找
+
+
+
+
+
+
