--- a/数据结构与算法学习笔记.md
+++ b/数据结构与算法学习笔记.md
@@ -22,6 +22,82 @@
 
 双向链表所需存储空间比单链表大，但是在指定节点的条件下，插入删除都是O(1)时间复杂度，而单链表则需要从头查找是O(n)时间复杂度。另外对于一个有序链表，双向链表按值查询的效率也更高，因为可以存储上次查找的位置p，然后根据目标值与p的大小决定向前还是向后查找
 
+```
+1. 力扣第206题，反转链表
+
+输入: 1->2->3->4->5->NULL
+输出: 5->4->3->2->1->NULL
+
+普通解法：
+# Definition for singly-linked list.
+# class ListNode:
+#     def __init__(self, x):
+#         self.val = x
+#         self.next = None
+
+class Solution:
+    def reverseList(self, head):
+        # 前指针节点
+        pre = None
+        # 当前指针节点
+        cur = head
+        # 每次循环，都将当前节点指向它前面的节点，然后前节点和当前节点后移
+        while cur:
+            # 临时节点，暂存当前节点的下一节点，用于后移
+            node = cur.next
+            # 将当前节点指向它前面的节点
+            cur.next = pre
+            # 前指针后移
+            pre = cur
+            # 当前指针后移
+            cur = node
+        return pre
+        
+神仙解法：
+class Solution:
+    def reverseList(self, head):
+        """
+        :head: ListNode
+        :return: ListNode
+        """
+        p, rev = head, None
+        while p:
+            rev, rev.next, p = p, rev, p.next
+        return rev
+        
+2. 力扣第141题，环形链表
+
+给定一个链表，判断链表中是否有环。
+
+# Definition for singly-linked list.
+# class ListNode:
+#     def __init__(self, x):
+#         self.val = x
+#         self.next = None
+
+class Solution:
+    def hasCycle(self, head):
+        # 定义慢指针，一次移动1个单位
+        i=head
+        # 定义快指针，一次移动2个单位
+        i=head
+        j=i
+        while head:
+            # 当快慢指针有一个后继节点为None时，说明不是循环链表
+            if not i.next or not j.next or not j.next.next:
+                return False
+            i, j = i.next, j.next.next
+            # 当快慢指针相遇时，说明是循环链表
+            if i==j:
+                return True
+        return False
+
+3. 力扣第21/19/876题
+
+
+
+```
+
 
 
 
