--- a/数据结构与算法学习笔记.md
+++ b/数据结构与算法学习笔记.md
@@ -66,7 +66,6 @@ class Solution:
         return rev
         
 2. 力扣第141题，环形链表
-
 给定一个链表，判断链表中是否有环。
 
 # Definition for singly-linked list.
@@ -92,7 +91,36 @@ class Solution:
                 return True
         return False
 
-3. 力扣第21/19/876题
+3. 力扣第21题，合并两个有序链表
+将两个升序链表合并为一个新的升序链表并返回。新链表是通过拼接给定的两个链表的所有节点组成的。 
+
+输入：1->2->4, 1->3->4
+输出：1->1->2->3->4->4
+
+class Solution:
+    def mergeTwoLists(self, l1, l2):
+        # 定义l1和l2的指针p1,p2
+        p1, p2 = l1, l2
+        # 定义一个头节点l3
+        l3 = ListNode(None)
+        # 定义l3的指针p3
+        p3 = l3
+        while p1 and p2:
+            # 如果p1的值小于等于p2的值，则将p3的next指向p1节点；否则指向p2节点
+            if p1.val <= p2.val:
+                p3.next = p1
+                p1 = p1.next
+            else:
+                p3.next = p2
+                p2 = p2.next
+            # p3指针后移
+            p3 = p3.next
+        # 如果l1和l2有一个未能遍历完成，则p3的next节点直接指向残留节点
+        if not p1:
+            p3.next = p2
+        else:
+            p3.next = p1
+        return l3.next
 
 
 
