--- a/数据结构与算法学习笔记.md
+++ b/数据结构与算法学习笔记.md
@@ -28,13 +28,13 @@
 输入: 1->2->3->4->5->NULL
 输出: 5->4->3->2->1->NULL
 
-普通解法：
 # Definition for singly-linked list.
 # class ListNode:
 #     def __init__(self, x):
 #         self.val = x
 #         self.next = None
 
+普通解法：
 class Solution:
     def reverseList(self, head):
         # 前指针节点
@@ -67,12 +67,6 @@ class Solution:
         
 2. 力扣第141题，环形链表
 给定一个链表，判断链表中是否有环。
-
-# Definition for singly-linked list.
-# class ListNode:
-#     def __init__(self, x):
-#         self.val = x
-#         self.next = None
 
 class Solution:
     def hasCycle(self, head):
@@ -122,7 +116,67 @@ class Solution:
             p3.next = p1
         return l3.next
 
+4. 力扣第19题，删除链表的倒数第N个节点
+给定一个链表，删除链表的倒数第 n 个节点，并且返回链表的头结点。
 
+给定一个链表: 1->2->3->4->5, 和 n = 2.
+当删除了倒数第二个节点后，链表变为 1->2->3->5.
+
+普通解法：
+class Solution:
+    def removeNthFromEnd(self, head, n):
+        # 通过列表l将遍历的链表值存储，最后再移除目标值重新构建链表
+        p, l = head, []
+        node = ListNode(None)
+        cur = node
+        while p:
+            l.append(p.val)
+            p = p.next
+        for idx, data in enumerate(l):
+            if idx == len(l)-n:
+                continue
+            cur.next = ListNode(data)
+            cur = cur.next
+        return node.next
+
+快慢指针解法：
+class Solution:
+    def removeNthFromEnd(self, head, n):
+        a = head
+        b = head
+        # a指针作为快指针，先走n步
+        for i in range(n):
+            if a.next:
+                a = a.next
+            else:
+                return head.next
+        # 当快指针走到最后的时候，慢指针走到倒数第n个节点
+        while a.next:
+            a = a.next
+            b = b.next
+        b.next = b.next.next
+        return head
+        
+5. 力扣第876题，链表中的中间节点
+给定一个带有头结点 head 的非空单链表，返回链表的中间结点。
+如果有两个中间结点，则返回第二个中间结点。
+
+输入：[1,2,3,4,5]
+输出：此列表中的结点 3 (序列化形式：[3,4,5])
+
+class Solution:
+    def middleNode(self, head):
+        # 快慢指针的思想，p1每次移动一个单位，p2每次移动2个单位，当p2移动到最后的时候，p1位置是中间节点
+        p1 = head
+        p2 = head
+        while p2 and p2.next:
+            p1 = p1.next
+            p2 = p2.next
+            if p2:
+                p2 = p2.next
+            else:
+                break
+        return p1
 
 ```
 
