--- a/数据结构与算法学习笔记.md
+++ b/数据结构与算法学习笔记.md
@@ -179,9 +179,71 @@ class Solution:
         return p1
 
 ```
+# 3.栈
+**栈是一种“操作受限”的线性表，只允许在一端进行插入和删除，FILO后进先出的数据结构**
+* 栈既可以通过数组实现（顺序栈），也可以通过链表实现（链式栈）
+* 栈操作包括入栈、出栈
+* 空间复杂度和时间复杂度都是O(1)
+
+**栈在函数调用中的应用**
+操作系统给每个线程分配了一块独立的内存空间，这块内存被组织成“栈”这种结构, 用来存储函数调用时的临时变量。每进入一个函数，就会将临时变量作为一个栈帧入栈，当被调用函数执行完成，返回之后，将这个函数对应的栈帧出栈
+
+**栈在表达式求值中的应用**
+编译器就是通过两个栈来实现的。其中一个保存操作数的栈，另一个是保存运算符的栈。我们从左向右遍历表达式，当遇到数字，我们就直接压入操作数栈；
+
+当遇到运算符，就与运算符栈的栈顶元素进行比较。如果比运算符栈顶元素的优先级高，就将当前运算符压入栈；如果比运算符栈顶元素的优先级低或者相同，从运算符栈中取栈顶运算符，从操作数栈的栈顶取 2 个操作数，然后进行计算，再把计算完的结果压入操作数栈，继续比较
+
+**栈在括号匹配中的应用**
+我们假设表达式中只包含三种括号，圆括号 ()、方括号 [] 和花括号{}，并且它们可以任意嵌套。比如，{[{}]}或 [{()}([])] 等都为合法格式，而{[}()] 或 [({)] 为不合法的格式。那我现在给你一个包含三种括号的表达式字符串，如何检查它是否合法呢？
+
+这里也可以用栈来解决。我们用栈来保存未匹配的左括号，从左到右依次扫描字符串。当扫描到左括号时，则将其压入栈中；当扫描到右括号时，从栈顶取出一个左括号。如果能够匹配，比如“(”跟“)”匹配，“[”跟“]”匹配，“{”跟“}”匹配，则继续扫描剩下的字符串。如果扫描的过程中，遇到不能配对的右括号，或者栈中没有数据，则说明为非法格式。
+
+当所有的括号都扫描完成之后，如果栈为空，则说明字符串为合法格式；否则，说明有未匹配的左括号，为非法格式。
+
+```
+1. 力扣第20题，有效的括号
+给定一个只包括 '('，')'，'{'，'}'，'['，']' 的字符串，判断字符串是否有效。
+有效字符串需满足：
+左括号必须用相同类型的右括号闭合。
+左括号必须以正确的顺序闭合。
+注意空字符串可被认为是有效字符串。
+
+输入: "()"
+输出: true
+
+普通解法：
+class Solution:
+    def isValid(self, s: str) -> bool:
+        stack = []
+        for i in s:
+            if not stack:
+                stack.append(i)
+                continue
+            if i ==')' and stack[-1] == '(' or i ==']' and stack[-1] == '[' or i =='}' and stack[-1] == '{':
+                stack.pop()
+            else:
+                stack.append(i)
+        if not stack:
+            return True
+        return False
+
+大神解法：
+class Solution:
+    def isValid(self, s):
+        while '{}' in s or '()' in s or '[]' in s:
+            s = s.replace('{}', '')
+            s = s.replace('[]', '')
+            s = s.replace('()', '')
+        return s == ''
 
 
+2. 力扣第155题，
+3. 力扣第232题，
+4. 力扣第844题，
+5. 力扣第224题，
+6. 力扣第682题，
+7. 力扣第496题，
 
-
+```
 
 
