--- a/数据结构与算法学习笔记.md
+++ b/数据结构与算法学习笔记.md
@@ -247,4 +247,72 @@ class Solution:
 
 ```
 
+# 4.队列
 
+# 5.递归
+
+# 6.排序
+
+# 7.线性排序
+
+# 8.排序优化
+
+# 9.二分查找
+
+# 10.跳跃表
+
+# 11.哈希表
+
+# 12.哈希算法
+
+1. 哈希算法：将任意长度的二进制值串映射为固定长度的二进制值串，这个映射的规则就是哈希算法，映射得到的值就是哈希值。
+2. 哈希算法4点要求：
+* a.从哈希值不能反向推导出原始数据（所以哈希算法也叫单向哈希算法）
+* b.对原始数据敏感，即使只修改了一个Bit，得到的哈希值也大不相同
+* c.哈希冲突概率要小，不同的原始数据，哈希值相同的概率很小
+* d.哈希算法效率要高，长文本也能快速计算哈希值
+3. 常见的哈希算法：MD5(消息摘要算法)，SHA(安全哈希算法)，DES(数据加密标准)，AES(高级加密标准)等
+4. 哈希算法的应用
+###1.安全加密###
+
+采用的安全加密算法有MD5和SHA，对于一个哈希算法，我们能做的是尽量减少哈希碰撞的概率，因为哈希算法产生的哈希值长度是有限的，而要哈希的数据则是无限的，因此根据抽屉原理，必有冲突的情况。所以实际上，足够低的冲突概率可以满足加密要求，如MD5有128位，则对应2^128个不同的哈希值，即冲突概率小于1/2^128。越复杂的加密算法，需要的计算时间也越长，因此选择加密算法，需要衡量破解难度与计算时间。
+
+###2.唯一标识###
+###3.数据校验###
+* 哈希函数
+* 负载均衡
+* 数据分片
+* 分布式存储
+
+
+# 13.二叉树
+
+# 14.红黑树
+
+# 15.递归树
+
+# 16.堆
+
+# 17.图
+
+# 18.深度优先搜索
+
+# 19.广度优先搜索
+
+# 20.Trie树
+
+# 21.AC自动机
+
+# 22.贪心算法
+
+# 23.分治算法
+
+# 24.回溯算法
+
+# 25.动态规划
+
+# 26.拓扑排序
+
+# 27.最短路径
+
+# 28.B+树
