--- a/数据结构与算法学习笔记.md
+++ b/数据结构与算法学习笔记.md
@@ -273,12 +273,19 @@ class Solution:
 * d.哈希算法效率要高，长文本也能快速计算哈希值
 3. 常见的哈希算法：MD5(消息摘要算法)，SHA(安全哈希算法)，DES(数据加密标准)，AES(高级加密标准)等
 4. 哈希算法的应用
-###1.安全加密###
+
+### 1.安全加密 ###
 
 采用的安全加密算法有MD5和SHA，对于一个哈希算法，我们能做的是尽量减少哈希碰撞的概率，因为哈希算法产生的哈希值长度是有限的，而要哈希的数据则是无限的，因此根据抽屉原理，必有冲突的情况。所以实际上，足够低的冲突概率可以满足加密要求，如MD5有128位，则对应2^128个不同的哈希值，即冲突概率小于1/2^128。越复杂的加密算法，需要的计算时间也越长，因此选择加密算法，需要衡量破解难度与计算时间。
 
-###2.唯一标识###
-###3.数据校验###
+### 2.唯一标识 ###
+
+对于存储海量图片来说，通过哈希算法生成唯一图片名称是一个常见方式。比如可以从图片的二进制码串中，取开头100个字节，中间100个中间，最后100个字节，然后将这300个字节进行哈希操作，得到哈希值作为图片唯一标识。
+
+### 3.数据校验 ###
+
+比如通过迅雷下载文件，基于P2P协议的方式，会从多个机器上并行下载文件块，全部下载完成后再组装成完整的文件。
+
 * 哈希函数
 * 负载均衡
 * 数据分片
