--- a/数据结构与算法学习笔记.md
+++ b/数据结构与算法学习笔记.md
@@ -278,18 +278,25 @@ class Solution:
 
 采用的安全加密算法有MD5和SHA，对于一个哈希算法，我们能做的是尽量减少哈希碰撞的概率，因为哈希算法产生的哈希值长度是有限的，而要哈希的数据则是无限的，因此根据抽屉原理，必有冲突的情况。所以实际上，足够低的冲突概率可以满足加密要求，如MD5有128位，则对应2^128个不同的哈希值，即冲突概率小于1/2^128。越复杂的加密算法，需要的计算时间也越长，因此选择加密算法，需要衡量破解难度与计算时间。
 
+问，**如何防止数据库中的用户信息被脱库？**
+
+答：通过哈希算法，对用户密码进行哈希加密后存储。不过尽管如此，仍然可能通过字典攻击/彩虹表来撞库，此时我们可以通过加盐的方式，增加密码复杂度，拿salt+password的组合进行哈希加密，再存到数据库中，进一步增加破解的难度。或者通过计算哈希足够慢的算法如PBKDF2WithHmacSHA1，降低硬件计算速度，减少安全风险。
+
 ### 2.唯一标识 ###
 
 对于存储海量图片来说，通过哈希算法生成唯一图片名称是一个常见方式。比如可以从图片的二进制码串中，取开头100个字节，中间100个中间，最后100个字节，然后将这300个字节进行哈希操作，得到哈希值作为图片唯一标识。
 
 ### 3.数据校验 ###
 
-比如通过迅雷下载文件，基于P2P协议的方式，会从多个机器上并行下载文件块，全部下载完成后再组装成完整的文件。
+比如通过迅雷下载文件，基于P2P协议的方式，会从多个机器上并行下载文件块，全部下载完成后再组装成完整的文件。由于网络传输并不安全，下载的文件块可能被恶意修改过，因此需要校验文件块的安全、正确、完整。方法可以是，对100个文件块分别取哈希值，存在种子文件中，当全部下载完成，再通过相同的哈希算法对下载的文件逐一哈希，最后跟种子文件中保存的哈希值对比，进行数据校验。
 
-* 哈希函数
-* 负载均衡
-* 数据分片
-* 分布式存储
+### 哈希函数 ###
+
+哈希函数是设计一个哈希表的关键，它决定了哈希冲突的概率和哈希表的性能。不过相对于其他应用，哈希函数对冲突的要求要低很多，毕竟可以通过**开放寻址法**或者**链表法**等方式可以解决。另一方面，哈希函数对能否反向解密也不关心，更加关注的是哈希值能否均匀分布。因此哈希函数用的算法一般比较简单，追求效率。
+
+### 负载均衡 ###
+### 数据分片 ###
+### 分布式存储 ###
 
 
 # 13.二叉树
