--- a/数据结构与算法学习笔记.md
+++ b/数据结构与算法学习笔记.md
@@ -271,10 +271,10 @@ class Solution:
 
 ### 2.哈希算法4点要求 ###
 
-* a.从哈希值不能反向推导出原始数据（所以哈希算法也叫单向哈希算法）
-* b.对原始数据敏感，即使只修改了一个Bit，得到的哈希值也大不相同
-* c.哈希冲突概率要小，不同的原始数据，哈希值相同的概率很小
-* d.哈希算法效率要高，长文本也能快速计算哈希值
+* a 从哈希值不能反向推导出原始数据（所以哈希算法也叫单向哈希算法）
+* b 对原始数据敏感，即使只修改了一个Bit，得到的哈希值也大不相同
+* c 哈希冲突概率要小，不同的原始数据，哈希值相同的概率很小
+* d 哈希算法效率要高，长文本也能快速计算哈希值
 
 ### 3.常见的哈希算法 ###
 
@@ -294,7 +294,7 @@ MD5(消息摘要算法)，SHA(安全哈希算法)，DES(数据加密标准)，AE
 
 对于存储海量图片来说，通过哈希算法生成唯一图片名称是一个常见方式。比如可以从图片的二进制码串中，取开头100个字节，中间100个中间，最后100个字节，然后将这300个字节进行哈希操作，得到哈希值作为图片唯一标识。
 
-### (3)数据校验 ###
+#### (3)数据校验 ####
 
 比如通过迅雷下载文件，基于P2P协议的方式，会从多个机器上并行下载文件块，全部下载完成后再组装成完整的文件。由于网络传输并不安全，下载的文件块可能被恶意修改过，因此需要校验文件块的安全、正确、完整。方法可以是，对100个文件块分别取哈希值，存在种子文件中，当全部下载完成，再通过相同的哈希算法对下载的文件逐一哈希，最后跟种子文件中保存的哈希值对比，进行数据校验。
 
