--- a/数据结构与算法学习笔记.md
+++ b/数据结构与算法学习笔记.md
@@ -265,6 +265,14 @@ class Solution:
 
 # 12.哈希算法
 
+问，**如何防止数据库中的用户信息被脱库？**
+
+答：通过哈希算法，对用户密码进行哈希加密后存储。不过尽管如此，仍然可能通过字典攻击/彩虹表来撞库，此时我们可以通过加盐的方式，增加密码复杂度，拿salt+password的组合进行哈希加密，再存到数据库中，进一步增加破解的难度。或者通过计算哈希足够慢的算法如PBKDF2WithHmacSHA1，降低硬件计算速度，减少安全风险。
+
+问，**哈希算法在分布式系统中有哪些应用？**
+
+答：
+
 ### 1.哈希算法 ###
 
 将任意长度的二进制值串映射为固定长度的二进制值串，这个映射的规则就是哈希算法，映射得到的值就是哈希值。
@@ -286,10 +294,6 @@ MD5(消息摘要算法)，SHA(安全哈希算法)，DES(数据加密标准)，AE
 
 采用的安全加密算法有MD5和SHA，对于一个哈希算法，我们能做的是尽量减少哈希碰撞的概率，因为哈希算法产生的哈希值长度是有限的，而要哈希的数据则是无限的，因此根据抽屉原理，必有冲突的情况。所以实际上，足够低的冲突概率可以满足加密要求，如MD5有128位，则对应2^128个不同的哈希值，即冲突概率小于1/2^128。越复杂的加密算法，需要的计算时间也越长，因此选择加密算法，需要衡量破解难度与计算时间。
 
-问，**如何防止数据库中的用户信息被脱库？**
-
-答：通过哈希算法，对用户密码进行哈希加密后存储。不过尽管如此，仍然可能通过字典攻击/彩虹表来撞库，此时我们可以通过加盐的方式，增加密码复杂度，拿salt+password的组合进行哈希加密，再存到数据库中，进一步增加破解的难度。或者通过计算哈希足够慢的算法如PBKDF2WithHmacSHA1，降低硬件计算速度，减少安全风险。
-
 #### (2)唯一标识 ####
 
 对于存储海量图片来说，通过哈希算法生成唯一图片名称是一个常见方式。比如可以从图片的二进制码串中，取开头100个字节，中间100个中间，最后100个字节，然后将这300个字节进行哈希操作，得到哈希值作为图片唯一标识。
@@ -303,9 +307,38 @@ MD5(消息摘要算法)，SHA(安全哈希算法)，DES(数据加密标准)，AE
 哈希函数是设计一个哈希表的关键，它决定了哈希冲突的概率和哈希表的性能。不过相对于其他应用，哈希函数对冲突的要求要低很多，毕竟可以通过**开放寻址法**或者**链表法**等方式可以解决。另一方面，哈希函数对能否反向解密也不关心，更加关注的是哈希值能否均匀分布。因此哈希函数用的算法一般比较简单，追求效率。
 
 #### (5)负载均衡 ####
+
+负载均衡的算法有轮询、随机、加权轮询等，那**如何实现一个会话粘滞(session sticky)的负载均衡算法呢？**即在同一个客户端上，在一次会话中，所有请求都路由到同一个服务器上。
+
+最简单的方法就是建立一个客户端IP与服务器编号的关系映射表，客户端发出请求先走映射表，查到服务器编号，再请求到服务器。简单的方法，有些弊端：
+* 客户端很多时，映射表就很大，浪费内存空间
+* 客户端上线/下线，服务器扩容/缩容，都会导致映射失效，维护映射表的成本很高
+
+借助哈希算法，对客户端IP或者会话ID进行取哈希值，然后将哈希值与服务器列表的大小进行取模运算，得到的值就是应该被路由到的服务器编号。如此便可把同一个IP来的请求都路由到同一个服务器上。
+
 #### (6)数据分片 ####
+
+(1)**假如我们有1T的日志文件，里面记录了搜索关键词，需要快速统计出每个关键词被搜索的次数，该如何做？**
+
+该问题有2个难度：
+* 日志太大，无法在一台机器内存中处理
+* 日志太大，处理时间会很长
+
+借助哈希算法，可以先对数据进行分片，然后采用多台机器并行处理。假设用n台机器，从日志文件中，依次对关键词取哈希值，然后对n取模，得到的结果就是被分配的机器编号。这样哈希值相同的关键词就分配到了同一个机器上，每个机器分别计算关键词出现的次数，最后合并起来。这实际上也是MapReduce的基本设计思想。
+
+(2)**如何快速判断图片是否在图库中？**
+
+假如图库中有1亿张图片，采取哈希表的方式建立图片唯一标识与存储路径的关系，可能会超出单台机器的内存上限。同样采取分片的思想，准备n台机器，每台维护一部分哈希表。每次从图库中取一个图片计算唯一标识，然后与n取模，得到的值就是要分配的机器编号，最后将该图片的唯一标识与图片路径发往对应的服务器构建哈希表。当要判断图片是否存在时，同样的哈希取值，然后与n取模，得到机器编号k，最后去k的哈希表中查找。
+
+**估算1亿张图片构建哈希表所需空间**
+
+哈希表中每个数据单元包含2个信息，图片唯一标识(哈希值)与图片路径，假设通过MD5计算哈希值，长度为128比特，即16字节；文件路径最长256字节，取平均128字节；考虑可能存在哈希冲突，采用链表法则需要存储指针8字节，因此一个数据单元平均152字节。假设一台机器装填因子0.75，那么所需内存为1亿*152/0.75/1024/1024/1024=18GB。假设一台机器8GB内存，则至少需要3台机器。
+
 #### (7)分布式存储 ####
 
+面对海量的数据，为了提高数据的读写能力，一般采用分布式的方式存储数据，比如分布式缓存，而海量数据的分布式缓存通常需要多机部署。根据分片的思想，通过哈希算法对数据取哈希值，然后对机器取模，得到应该存储对机器编号。但是，如果数据增多，机器扩容，比如从10台扩容到11台，这就可能会出问题，比如12，原来对10取模，现在对11取模，结果不一样，那数据就分配错了，因此需要重新计算哈希值并且要转移数据到正确对机器上。这就相当于大量缓存突然失效，发送雪崩效应，压垮数据库。
+
+所以我们需要一种方法，可以在加入一台机器后，并不需要做大量对数据转移，此时**一致性哈希算法**闪亮登场。比如表盘，现在有3台机器，分别是12点，4点，8点的位置，以顺时针的方向，数据1，2，3存到机器4中，5，7存在机器8中，9，10存在机器12中，现在要增加一台机器6，那么只需要把数据5转移到机器6中即可，其他的数据都不需要动。
 
 # 13.二叉树
 
