--- a/数据结构与算法学习笔记.md
+++ b/数据结构与算法学习笔记.md
@@ -263,6 +263,34 @@ class Solution:
 
 # 11.哈希表
 
+### 1.哈希思想
+
+**哈希表用的是数组支持按照下标随机访问时间复杂度为O(1)的特性，所以在某种程度上，哈希表就是数组的一种拓展**。通过哈希函数把元素的键映射为下标，然后将数据存储在数组对应下标的位置，当按照键取数据时，就是用同样的哈希函数，将键转化为数组下标，然后取数据。
+
+### 2.哈希函数
+
+**哈希函数设计的3点要求**
+* 哈希函数计算得到的哈希值是一个非负整数
+* 如果key1=key2，则hash(key1)==hash(key2)
+* 如果key1!=key2，则hash(key1)!=hash(key2)
+
+其中第三点，实际上几乎不可能实现，哈希冲突难以避免，而且数组存储空间有限，更会增加哈希冲突的概率。
+
+### 3.哈希冲突
+
+常用2类方法解决哈希冲突，开放寻址法和链表法
+
+#### 开放寻址法 ####
+
+核心思想是出现了哈希冲突，则重新探测一个空闲位置插入数据。探测位置的方法，比如**线性探测**，如果往哈希表中插数据，该数据被哈希后，存储位置已经被占用了，则从此位置开始，依次向后查找，到底了再从头开始找，直到有空位置，插入哈希值。
+
+在哈希表中查找元素类似插入排序过程，通过哈希函数得到元素键的哈希值，然后比较数组中下标为哈希值的元素和要查找的元素，如果相等明显就是目标元素，否则就按顺序向后依次查找，如果遍历到数组中的空闲位置还没有找到，则判定目标元素不在哈希表中。
+
+哈希表支持插入、查找，也支持删除操作。对于线性探测法解决冲突的哈希表，需要做软删除，即标记删除，否则删除后出现空位，会导致插入冲突时查找位置失效。
+
+线性探测法
+
+
 # 12.哈希算法
 
 问，**如何防止数据库中的用户信息被脱库？**
