--- a/数据结构与算法学习笔记.md
+++ b/数据结构与算法学习笔记.md
@@ -261,7 +261,28 @@ class Solution:
 
 # 10.跳跃表
 
+问，**Redis为什么采用跳表实现有序集合，而非红黑树？**
+答：严格来说，Redis中的有序集合通过跳表和哈希表实现的。由于有序集合的核心操作包括插入、删除、查找、区间查找、迭代输出等，其中插入、删除、查找及迭代输出这几个操作，红黑树也可以完成，时间复杂度也和跳表一样。但是按照区间查询数据，红黑树效率不如跳表高。当然，跳表实现起来更加简单，且更加灵活，可以通过改变索引构建策略，调整效率和内存消耗。
+
+跳跃表是一种可以支持快速插入、删除、操作操作的动态数据结构，Redis中的有序集合就是用跳表实现的。对于一个单链表来说，即使存储的数据有序，查找也需要从头遍历，时间复杂度就是O(n)；但是如果给链表建立多级索引，比如每两个节点提取一个节点到上一级，抽出来的这级叫做索引层，其中索引节点有个down指针，指向下一级节点。这种**链表加多级索引的结构，就是跳跃表**。跳表的第k级索引的节点个数是第k-1级索引的节点个数1/2，即具有n个节点的单链表，第1级索引节点个数是n/2，第k级索引节点个数是n/(2^k)。采用2分法抽节点，则每级最多访问3个节点。**跳表查询的时间复杂度是O(logn)**，与二分查找一样。这种查询效率的提升，代价就是建立了多级索引，以空间换时间的策略，其**空间复杂度是O(n)**。如果想减少索引空间占用，则可以采用3分法抽节点的策略。
+
+跳表的动态**插入、删除查找，时间复杂度也是O(logn)**，需要注意的是，删除操作时，如果该节点在索引中也有出现，则除了要删除链表上的节点，还要删除索引中的节点
+
+**跳表索引动态更新**，当不停地向跳表中插入数据，就需要更新索引，防止2个索引节点中数据过多的情况。跳表通过随机函数来维护索引与原始链表的平衡。这个随机函数，决定将这个节点插入到哪几级索引中，比如随机函数生成值2，则将该节点添加到第1级和第2级索引中。
+
 # 11.哈希表
+
+问，**如何设计一个工业级的哈希表？**
+
+首先要有几点要求：
+* 支持快速的查询、插入、删除操作
+* 内存占用合理，不能浪费过多的内存空间
+* 性能稳定，极端情况下性能也不会退化到无法接受的情况
+
+设计思路从3方面考虑：
+* 设计一个合适的哈希函数
+* 选择合适的装填因子阈值，设计动态扩容策略
+* 选择合适的哈希冲突解决方法
 
 ### 1.哈希思想
 
@@ -274,7 +295,9 @@ class Solution:
 * 如果key1=key2，则hash(key1)==hash(key2)
 * 如果key1!=key2，则hash(key1)!=hash(key2)
 
-其中第三点，实际上几乎不可能实现，哈希冲突难以避免，而且数组存储空间有限，更会增加哈希冲突的概率。
+其中第三点，实际上几乎不可能实现，哈希冲突难以避免，而且数组存储空间有限，更会增加哈希冲突的概率。哈希函数的设计不能太复杂，否则会影响哈希性能，其次生成的值要尽可能均匀分布，这样可以减少哈希冲突，即使冲突了，也不会导致某个槽数据特别多的情况。
+
+哈希函数的设计方法，有**数据分析法**，比如取手机号后四位作为哈希值来区分手机号；直接寻址法、平方取中法、折叠法、随机数法等等。
 
 ### 3.哈希冲突
 
@@ -288,8 +311,24 @@ class Solution:
 
 哈希表支持插入、查找，也支持删除操作。对于线性探测法解决冲突的哈希表，需要做软删除，即标记删除，否则删除后出现空位，会导致插入冲突时查找位置失效。
 
-线性探测法
+线性探测法有很大的问题，就是哈希表中数据越多，哈希冲突概率越大，空闲位置越少，探测时间越久，极端情况下需要探测整个表，时间复杂度退化为O(n)。除此之外，还有**二次探测**和**双重哈希**两种经典探测方法。二次探测相比线性探测，将线性探测的步长由1调整为二次方，原来是hash(key)+0,hash(key)+1,hash(key)+2，现在是hash(key)+0，hash(key)+1^2，hash(key)+2^2。而双重哈希，就是使用一组哈希函数，先用hash1(key)，如果存储位置被占了，则用hash2(key)，以此类推，直到找到空闲存储位置。
 
+**装填因子**=哈希表中的元素个数 / 哈希表长度，装填因子越大，说明空闲位置越少，冲突概率越高，哈希表性能越低。如果装填因子过大，则需要动态扩容，重新申请一个更大的哈希表，然后将数据搬移到新表中。不过哈希表扩容的数据搬移操作比较复杂，因为哈希表大小变了，数据存储位置也变了，因此需要重新计算数据的哈希值（存储位置）。插入一个数据，不扩容的情况下，时间复杂度是O(1)，扩容情况下，时间复杂度是O(n)，均摊情况下，时间复杂度还是O(1)。
+
+装填因子的选择需要权衡，装填因子过大，会导致哈希冲突概率变大，如果过小，会导致内存浪费严重。
+
+**如何避免低效扩容？**避免扩容时一次性搬移数据过多导致耗时太大的情况，可以将扩容操作穿插在插入操作中，分批完成。当装填因子达到阈值触发扩容时，只申请新表空间，不搬移数据，等插入数据时直接插到新表中，然后从老表取一个数据搬移到新表，如此重复操作，即可消解扩容耗时问题。对于查询操作，先从新表查，没有再去老表查。这种方式让插入一个数据的数据复杂度稳定在了O(1)。
+
+
+
+#### 链表法 ####
+
+链表法更加简单，也更加常用。在哈希表中，每个数组单元槽对应一个链表，哈希值相同的元素就放在相同槽位对应的链表中。插入的时候，通过哈希函数算出哈希值，即对应的槽位，然后将数据插入对应链表中，所以插入的时间复杂度O(1)，而查找和删除的时间复杂度，与链表长度k成正比，对于哈希均匀的哈希函数而言，理论上k=n/m，n是哈希表中数据个数，m是哈希表中槽的个数.
+
+通过上面的说明，可以知道，哈希表的查询效率并不能笼统的说是O(1)，跟哈希函数、装填因子、哈希冲突都有关系。极端情况下，攻击者通过精心构造的数据，使得所有的数据经过哈希后，都散列到同一个槽里，如果我们采用链表的冲突解决方法，此时哈希表就退化为链表，查询时间复杂度退化为O(n)，加入表中有10万数据，之前查询100次需要0.1秒，如今需要1万秒。这样就可以因为查询消耗系统资源，导致系统无法响应其他请求，从而达到DoS的目的，这也是**哈希表碰撞攻击的基本原理**。
+
+
+**当数据量较小、装填因子小的时候，适合开放寻址法，这也是Java中ThreadLocalMap使用的开放寻址法的原因。链表法适合存储大对象、大数据量，且更加灵活，比如可以用红黑树替代链表**
 
 # 12.哈希算法
 
