--- a/数据结构与算法学习笔记.md
+++ b/数据结构与算法学习笔记.md
@@ -262,6 +262,7 @@ class Solution:
 # 10.跳跃表
 
 问，**Redis为什么采用跳表实现有序集合，而非红黑树？**
+
 答：严格来说，Redis中的有序集合通过跳表和哈希表实现的。由于有序集合的核心操作包括插入、删除、查找、区间查找、迭代输出等，其中插入、删除、查找及迭代输出这几个操作，红黑树也可以完成，时间复杂度也和跳表一样。但是按照区间查询数据，红黑树效率不如跳表高。当然，跳表实现起来更加简单，且更加灵活，可以通过改变索引构建策略，调整效率和内存消耗。
 
 跳跃表是一种可以支持快速插入、删除、操作操作的动态数据结构，Redis中的有序集合就是用跳表实现的。对于一个单链表来说，即使存储的数据有序，查找也需要从头遍历，时间复杂度就是O(n)；但是如果给链表建立多级索引，比如每两个节点提取一个节点到上一级，抽出来的这级叫做索引层，其中索引节点有个down指针，指向下一级节点。这种**链表加多级索引的结构，就是跳跃表**。跳表的第k级索引的节点个数是第k-1级索引的节点个数1/2，即具有n个节点的单链表，第1级索引节点个数是n/2，第k级索引节点个数是n/(2^k)。采用2分法抽节点，则每级最多访问3个节点。**跳表查询的时间复杂度是O(logn)**，与二分查找一样。这种查询效率的提升，代价就是建立了多级索引，以空间换时间的策略，其**空间复杂度是O(n)**。如果想减少索引空间占用，则可以采用3分法抽节点的策略。
@@ -274,7 +275,7 @@ class Solution:
 
 问，**如何设计一个工业级的哈希表？**
 
-首先要有几点要求：
+答：首先要有几点要求：
 * 支持快速的查询、插入、删除操作
 * 内存占用合理，不能浪费过多的内存空间
 * 性能稳定，极端情况下性能也不会退化到无法接受的情况
@@ -338,7 +339,7 @@ class Solution:
 
 问，**哈希算法在分布式系统中有哪些应用？**
 
-答：
+答：负载均衡、数据分片、分布式存储
 
 ### 1.哈希算法 ###
 
