--- a/数据结构与算法学习笔记.md
+++ b/数据结构与算法学习笔记.md
@@ -259,6 +259,157 @@ class Solution:
 
 # 9.二分查找
 
+**二分查找针对的是一个有序数据集合，查找思想类似分治思想。每次通过跟区间的中间元素对比，将查找区间缩小为之前的一半，直到找到要查找的元素，或者区间缩小为0**
+
+二分查找是一种高效的查找算法，时间复杂度是O(logn)，和堆、二叉树的时间复杂度一样。简单二分查找不包括重复数据，变形二分查找会有重复数据。但是二分查找的局限性也很明显：
+* 二分查找依赖顺序表结构，即数组
+* 二分查找针对有序数据，否则需要先排序，排序的最低时间复杂度是O(nlogn)
+* 数据量太小没必要用二分查找，顺序遍历即可；数据量太大不适合二分查找，底层数组内存空间限制
+
+虽然大部分情况下，用二分查找可以解决的问题，也可以用哈希表、二叉树解决，但是后者需要额外内存空间，二分查找底层依赖的是数组，不需要额外存储空间，是最省内存的方式。
+
+```
+# 二分查找的循环实现
+def bsearch(lst, value):
+    """
+    简单二分查找
+    :param lst:  传入数组
+    :param value: 查找值
+    :return:
+    """
+    # 端点索引
+    low, high = 0, len(lst)-1
+    while low <= high:
+        # 中间值，位操作，防止溢出加快速度
+        mid = low + ((high - low) >> 1)
+        if value == lst[mid]:
+            return mid
+        if value > mid:
+            low = mid + 1
+        else:
+            high = mid - 1
+    return -1
+
+# 二分查找的递归实现
+def bsearch(lst, value):
+    """
+    简单二分查找
+    :param lst:  传入数组
+    :param value: 查找值
+    :return:
+    """
+    # 端点索引
+    low, high = 0, len(lst) - 1
+    # 递归函数
+    def inner(lst, low, high, value):
+        if low > high:
+            return -1
+        mid = low + ((high - low) >> 1)
+        if lst[mid] == value:
+            return mid
+        if value > mid:
+            return inner(lst, mid + 1, high, value)
+        else:
+            return inner(lst, low, mid - 1, value)
+
+    return inner(lst, low, high, value)
+
+```
+
+尽管第一个二分查找算法于1946年出现，而第一个完全正确的二分查找算法实现，直到1962年才出现。变形二分查找有4种常见类型：
+* 查找第一个值等于目标值的元素，如\[1,2,3,4,4,5]，查找第一个4
+```
+def advanced_bsearch(lst, value):
+    """
+    变形二分查找，查找第一个值等于目标值的元素
+    :param lst: [1,2,3,4,4,5]
+    :param value: 4
+    :return: 3
+    """
+    low, high = 0, len(lst) - 1
+    while low <= high:
+        mid = low + ((high - low) >> 1)
+        if value > lst[mid]:
+            low = mid + 1
+        elif value<lst[mid]:
+            high = mid - 1
+        else:
+            if mid==0 or lst[mid-1] != value:
+                return mid
+            else:
+                high = mid-1
+    return -1
+```
+
+* 查找最后一个值等于目标值的元素，如\[1,2,4,4,5]，查找最后一个4
+```
+def advanced_bsearch(lst, value):
+    """
+    变形二分查找，查找最后一个值等于目标值的元素
+    :param lst: [1,2,4,4,5]
+    :param value: 4
+    :return: 3
+    """
+    low, high = 0, len(lst) - 1
+    while low <= high:
+        mid = low + ((high - low) >> 1)
+        if value > lst[mid]:
+            low = mid + 1
+        elif value<lst[mid]:
+            high = mid - 1
+        else:
+            if mid==n-1 or lst[mid+1] != value:
+                return mid
+            else:
+                low = mid+1
+    return -1
+
+```
+
+* 查找第一个大于等于目标值的元素，如\[1,2,3,6,7,8]，查找第一个大于等于4
+```
+def advanced_bsearch(lst, value):
+    """
+    变形二分查找，查找第一个值大于等于目标值的元素
+    :param lst: [1,2,3,6,7,8]
+    :param value: 4
+    :return: 3
+    """
+    low, high = 0, len(lst) - 1
+    while low <= high:
+        mid = low + ((high - low) >> 1)
+        if value > lst[mid]:
+            low = mid + 1
+        else:
+            if mid == 0 or lst[mid - 1] < value:
+                return mid
+            else:
+                high = mid - 1
+    return -1
+```
+
+* 查找最后一个小于等于目标值的元素，如\[1,2,4,4,5]，查找第一个4
+```
+def advanced_bsearch(lst, value):
+    """
+    变形二分查找，查找最后一个小于等于目标值的元素
+    :param lst: [1,2,4,4,5]
+    :param value: 4
+    :return: 3
+    """
+    low, high = 0, len(lst) - 1
+    while low <= high:
+        mid = low + ((high - low) >> 1)
+        if value < lst[mid]:
+            low = mid + 1
+        else:
+            if mid == n-1 or lst[mid + 1] > value:
+                return mid
+            else:
+                low = mid + 1
+    return -1
+```
+
 # 10.跳跃表
 
 问，**Redis为什么采用跳表实现有序集合，而非红黑树？**
