--- a/数据结构与算法学习笔记.md
+++ b/数据结构与算法学习笔记.md
@@ -249,6 +249,16 @@ class Solution:
 
 # 4.队列
 
+问：**当我们向固定大小的线程池中请求一个线程时，如果线程池中没有空闲资源了，这个时候线程池如何处理这个请求？是拒绝请求还是排队请求？各种处理策略又是怎么实现的呢？**
+答：第一种是非阻塞的处理方式，直接拒绝请求；另一种是阻塞式的处理方式，将请求排队，等有空闲线程时，取出排队的请求继续处理。那么我们需要一个队列来存储请求，基于数组和链表的队列实现方式，有什么区别？基于链表的队列，可以实现一个支持无限排队的无界队列，但是可能导致过多的请求排队，响应时间过长。所以响应敏感的系统，不适合链式无限队列。基于数组的队列，大小有限制，超限后拒绝新的请求，对响应敏感的系统更合理。**实际上对于大部分资源有限的场景，都可以通过队列实现排队来应对资源不足**
+
+队列，先进先出FIFO的数据结构，和栈一样也是一种操作受限的线性表结构。基本操作有：
+* 入队，放一个数据到队尾
+* 出队，从队头取一个元素
+
+队列也可以分为，顺序队列、链式队列、循环队列。对于顺序队列，数组实现需要2个指针，一个是head指针指向队头，应该是tail指针指向队尾，当head==tail时队空，当tail==n时队满。但是循环队列不同，队空是head==tail，队满是(tail+1)%n=head，且循环队列队满的时候，tail指向的位置没有存储数据，因此会浪费一个数组的存储空间。
+
+
 # 5.递归
 
 # 6.排序
@@ -258,6 +268,10 @@ class Solution:
 # 8.排序优化
 
 # 9.二分查找
+
+问：**如何快速定位出一个 IP 地址的归属地？**
+答：由于IP归属地是一个段，需要判定单个IP落在哪个IP段内。假如有12万条IP区间与归属地段对应数据，如何快速定位某个IP段归属地呢？
+可以先预处理这12万条数据，让其按照起始IP从小到大排序（起始IP地址可以转化为32位整型数字），然后问题就变成了**在有序数组中，查找最后一个小于等于给定值的元素**了，即二分查找的第4种变形问题。
 
 **二分查找针对的是一个有序数据集合，查找思想类似分治思想。每次通过跟区间的中间元素对比，将查找区间缩小为之前的一半，直到找到要查找的元素，或者区间缩小为0**
 
@@ -409,6 +423,12 @@ def advanced_bsearch(lst, value):
                 low = mid + 1
     return -1
 ```
+
+```
+力扣第33题，搜索旋转排序数组
+
+```
+
 
 # 10.跳跃表
 
