--- a/数据结构与算法学习笔记.md
+++ b/数据结构与算法学习笔记.md
@@ -427,6 +427,33 @@ def advanced_bsearch(lst, value):
 ```
 力扣第33题，搜索旋转排序数组
 
+输入: nums = [4,5,6,7,0,1,2], target = 0
+输出: 4
+
+class Solution:
+    def search(self, nums: List[int], target: int) -> int:
+        if not nums:
+            return -1
+        # 二分查找
+        low,high = 0,len(nums)-1
+        while low<=high:
+            # 中间值
+            mid = low+((high-low)>>1)
+            if nums[mid] == target:
+                return mid
+            if nums[mid]<nums[high]:
+                # 则nums[mid:high]是有序的
+                if nums[mid] < target <= nums[high]:
+                    low = mid+1
+                else:
+                    high = mid-1
+            else:
+                # nums[low,mid]是有序的
+                if nums[low]<=target<nums[mid]:
+                    high = mid-1
+                else:
+                    low = mid+1
+        return -1
 ```
 
 
