--- a/数据结构与算法学习笔记.md
+++ b/数据结构与算法学习笔记.md
@@ -261,7 +261,118 @@ class Solution:
 
 # 5.递归
 
+递归是一种应用非常广泛的编程思想，很多数据结构和算法都用到递归的思想，比如DFS深度优先搜索、前中后序遍历二叉树等。
+
+什么样的问题可以用递归的思想来解决呢？
+* 一个问题的解可以分为几个子问题的解
+* 这个问题与子问题，除了数据规模不同，求解思路完全一样
+* 存在递归终止条件
+
+编写递归代码最重要的是**写出递归公式，找到终止条件**。总的来说，**写递归代码的关键就是找到将大问题分解为小问题的规律，并基于此写出递推公式，然后找出终止条件，最后将公式和条件转化为代码**
+
+递归代码要注意**堆栈溢出**，避免过度深入的递归。通常递归会比循环速度慢的原因包括**递归有大量的重复计算**和每次递归调用都会在内存栈中保存一次现场数据，
+
 # 6.排序
+
+排序通常是我们学的第一个算法，经典且常用的排序算法有：
+* 冒泡排序
+* 插入排序
+* 选择排序
+* 归并排序
+* 快速排序
+* 桶排序
+* 基数排序
+* 计数排序
+
+排序算法 | 时间复杂度 |  是否基于比较  
+-|-|-
+冒泡，插入，选择 | O(n^2) | 是 |
+快排，归并 | O(nlogn) | 是
+桶，基数，计数 | O(n) | 否
+
+分析排序，不仅要分析时间复杂度、空间复杂度，还要考虑是否原地排序、是否稳定排序。
+
+排序算法 | 原地排序 |  稳定排序 | 时间复杂度(最好、最坏、平均)  
+-|-|-|-
+冒泡 | 是 | 是 | O(n)、O(n^2)、 O(n^2)
+插入 | 是 | 是 | O(n)、O(n^2)、 O(n^2)
+选择 | 是 | 否 | O(n^2)、O(n^2)、 O(n^2)
+
+**尽管插入排序和冒泡排序复杂度相同，为什么实践中我们更倾向于使用插入排序呢？**
+实际上从代码来看，由于Python支持交替赋值，所以是一次赋值语句，而其他语言可能不支持这样的表达式，因此冒泡排序需要3个赋值操作，而插入排序只需要1个，因此冒泡排序代码执行效率没有插入排序高。并且冒泡排序的交换次数是固定的，是原始数据的逆序度，而插入排序的有优化的空间，比如希尔排序。
+
+### 1.冒泡排序 ###
+
+```
+def bubble_sort(lst):
+    """
+    冒泡排序，原地排序无需返回新数组
+    :param lst:
+    :return:
+    """
+    if len(lst) <= 1:
+        return
+    n = len(lst)
+    for i in range(n):
+        # 整个数组有序标记
+        flg = False
+        for j in range(n-i-1):
+            if lst[j] > lst[j + 1]:
+                lst[j], lst[j + 1] = lst[j + 1], lst[j]
+                flg = True
+        if flg is False:
+            # 如果一轮循环没有数据交换，则说明已经有序
+            break
+```
+
+### 2.插入排序 ###
+
+```
+def insert_sort(lst):
+    """
+    插入排序
+    :param lst:
+    :return:
+    """
+    if len(lst) <= 1:
+        return
+    n = len(lst)
+    for i in range(1, n):
+        # 当前待插入的值
+        value = lst[i]
+        # 当前要与待插入值比较的索引
+        j = i - 1
+        # 从后向前比较
+        while j >= 0 and value < lst[j]:
+            # 如果当前比较的值比待插入待值大，则比较值后移一位
+            lst[j + 1] = lst[j]
+            j -= 1
+        # 最后一个完成排序的比较值，后一位就是待插入值
+        lst[j + 1] = value
+```
+
+### 3.选择排序 ###
+
+```
+def choose_sort(lst):
+    """
+    选择排序
+    :param lst:
+    :return:
+    """
+    if len(lst) <= 1:
+        return
+    n = len(lst)
+    for i in range(n - 1):
+        # 默认每层循环，首位是最小索引
+        m_idx = i
+        for j in range(i + 1, n):
+            if lst[j] < lst[m_idx]:
+                # 找到最小索引
+                m_idx = j
+        # 一层循环后，交换首位与最小位的值
+        lst[i], lst[m_idx] = lst[m_idx], lst[i]
+```
 
 # 7.线性排序
 
