--- a/数据结构与算法学习笔记.md
+++ b/数据结构与算法学习笔记.md
@@ -274,6 +274,10 @@ class Solution:
 
 # 6.排序
 
+问：**如何在O(n)的时间复杂度内查找一个无序数组中的第K大元素？**
+
+答：
+
 排序通常是我们学的第一个算法，经典且常用的排序算法有：
 * 冒泡排序
 * 插入排序
@@ -373,6 +377,84 @@ def choose_sort(lst):
         # 一层循环后，交换首位与最小位的值
         lst[i], lst[m_idx] = lst[m_idx], lst[i]
 ```
+
+冒泡、插入、选择排序，时间复杂度高，适合小规模数据的排序，对于大规模数据，采用时间复杂度O(nlogn)的归并排序和快速排序更适合。归并和快排都利用了分治的思想，即将一个大问题分解为小问题来解决，小问题解决了，大问题自然就解决了。分治算法一般都是通过递归来实现。
+
+### 4.归并排序 ###
+
+先把数组从中间分为前后两部分，然后对前后两部分分别排序，再将排好序的两部分合并起来，这样整个数组就有序了。归并排序是稳定排序，但是不是原地排序，需要额外申请内存空间存储结果。**其时间复杂度是O(nlogn)，空间复杂度是O(n)**。
+
+分析归并排序，其递推公式是`merge_sort(p...r)=merge(merge_sort(p...q), merge_sort(q+1,r))`,终止条件是`p>=r,不用继续分解`。归并排序代码如下：
+```
+def merge_sort(lst):
+    """
+    归并排序
+    :param lst:
+    :return:
+    """
+    n = len(lst)
+    if n <= 1:
+        return lst
+    # 把数组分为两部分
+    mid_idx = n // 2
+    l, r = lst[:mid_idx], lst[mid_idx:]
+    # 对每部分对数组再进行排序
+    l_res = merge_sort(l)
+    r_res = merge_sort(r)
+    # 合并两个数组
+    res_list = []
+    while l_res and r_res:
+        # 利用list特性，POP出首位最小的数
+        res_list.append(l_res.pop(0)) if l_res[0] <= r_res[0] else res_list.append(r_res.pop(0))
+    res_list.extend(l_res) if not r_res else res_list.extend(r_res)
+    return res_list
+```
+
+### 5.快速排序 ###
+
+快排利用的也是分治思想，乍一看和归并相似，但是思路其实完全不一样。简单来说，快排的思想是，给定一个数组，选择一个分区点pivot，然后遍历数组，将小于pivot的放到左边，大于pivot的放到右边。然后循环对左右两边的数据继续分区，直到区间缩小为1，则所有数据都有序了。快排原地排序，需要用到交换操作，因此不是稳定排序。递推公式是`quick_sort(p...r)=quick_sort(p...q-1)+quick_sort(q+1,r)`,终止条件是`p>=r`。代码如下：
+```
+def quick_sort_simple(lst):
+    """
+    快速排序，非原地排序，稳定排序
+    :param lst:
+    :return:
+    """
+    if len(lst) <= 1:
+        return lst
+    pivot = lst[-1]
+    low = [x for x in lst[:-1] if x <= pivot]
+    high = [x for x in lst[:-1] if x > pivot]
+    low_res = quick_sort_simple(low)
+    high_res = quick_sort_simple(high)
+    return low_res + [pivot] + high_res
+
+def quick_sort(lst, l=None, r=None):
+    """
+    快速排序，原地排序，非稳定排序
+    :param lst:
+    :return:
+    """
+    if len(lst) <= 1:
+        return
+    if l is None and r is None:
+        l, r = 0, len(lst) - 1
+    if l >= r:
+        return
+    pivot = lst[r]
+    # 这里的思想是，pivot分割出左右两部分，[l,idx-1]小于pivot，[idx+1,r]大于pivot
+    idx = l
+    for i in range(l, r):
+        if lst[i] < pivot:
+            # 如果当前值小于pivot，则交换idx位置的值，同时idx向右前进一位
+            lst[i], lst[idx] = lst[idx], lst[i]
+            idx += 1
+    # 交换idx和pivot，让pivot的值成为左边部分的上限
+    lst[r], lst[idx] = lst[idx], lst[r]
+    quick_sort(lst, l, idx - 1)
+    quick_sort(lst, idx + 1, r)
+```
+
 
 # 7.线性排序
 
