--- a/数据结构与算法学习笔记.md
+++ b/数据结构与算法学习笔记.md
@@ -276,7 +276,7 @@ class Solution:
 
 问：**如何在O(n)的时间复杂度内查找一个无序数组中的第K大元素？**
 
-答：
+答：快排的核心思想是分治与分区，利用原地分区策略和二分策略，取数组最后一个元素作为pivot，对数组原地分区，如果大于pivot的数据放在左边，小于pivot放在右边，这样如果pivot的索引p+1=K，则pivot就是第K大元素；如果p+1<K，则在右边区间继续查找，否则在左区间查找。
 
 排序通常是我们学的第一个算法，经典且常用的排序算法有：
 * 冒泡排序
@@ -441,9 +441,8 @@ def quick_sort(lst, l=None, r=None):
         l, r = 0, len(lst) - 1
     if l >= r:
         return
-    pivot = lst[r]
-    # 这里的思想是，pivot分割出左右两部分，[l,idx-1]小于pivot，[idx+1,r]大于pivot
-    idx = l
+    # 这里的原地分区思想是，pivot分割出左右两部分，[l,idx-1]小于pivot，[idx+1,r]大于pivot
+    idx, pivot = l, lst[r]
     for i in range(l, r):
         if lst[i] < pivot:
             # 如果当前值小于pivot，则交换idx位置的值，同时idx向右前进一位
@@ -451,9 +450,12 @@ def quick_sort(lst, l=None, r=None):
             idx += 1
     # 交换idx和pivot，让pivot的值成为左边部分的上限
     lst[r], lst[idx] = lst[idx], lst[r]
+    # 完成原地分区，处理左右分区
     quick_sort(lst, l, idx - 1)
     quick_sort(lst, idx + 1, r)
 ```
+
+归并排序是自下而上，先处理子问题，再合并；而快排则是自上而下，先分区，再处理子问题。归并排序无法做到原地排序，因此在大数据场景下，时间复杂度为O(nlogn)、空间复杂度为O(1)的快排更有优势。
 
 
 # 7.线性排序
