--- a/数据结构与算法学习笔记.md
+++ b/数据结构与算法学习笔记.md
@@ -460,6 +460,35 @@ def quick_sort(lst, l=None, r=None):
 
 # 7.线性排序
 
+问：**如何根据年龄给100万用户数据排序？**
+答：计数排序的思想，假设年龄范围是1～120岁，那么可以将用户划分到120个桶内，然后依次遍历120个桶内元素，这样就得到了100万用户的年龄排序结果。
+
+线性排序指的是时间复杂度是O(n)的排序算法：**桶排序、计数排序、基数排序**。之所以这3个算法可以做到线性排序，是因为它们都不是基于比较的排序算法。但是线性排序对数据的要求很苛刻，因此其适用场景需要特别注意。
+
+### 1.桶排序 ###
+
+核心思想是把待排序的数据分到几个**有序的桶**里，每个**桶内再分别进行排序**。这样等桶内排序完成后，按顺序取出不同桶的数据，整体就是有序的了。桶排序的条件如下：
+* 待排序数据可以容易划分成m个桶，且桶间有序。这样桶内数据排序后，桶间无序排序
+* 桶内数据分布均匀。如果桶内数据多多少少不均匀，极端情况下，所有的数据都在一个桶里，时间时间复杂度就退化到O(nlogn)了
+* 桶排序适合用在外部排序中。即排序数据存储在外部磁盘中，数据量大，无法全部加载到内存中。
+
+**比如我们对10GB的数据进行排序(可能是订单金额数据)，但是内存有限只有2GB，那么如何做呢？**我们先假定金额均匀分布，那么可以先扫描一遍文件，记录金额最大最小值，比如最大10万最小1元，那么我们可以划分出10个桶，第1个桶存1～1万元的数据，第2个桶存10001～2万元的数据，以此类推。每个桶对应一个文件，那么对单个桶进行快排。完成桶内快排后，只需依次读取这10个文件，追加写入到1个文件中，即可完成大文件排序。那么假如金额不是均匀分布的呢？我们可以针对划分后的大桶，继续进行划分，直到所有的文件都可以读入内存。
+
+### 2.计数排序###
+
+当要排序的n个数据，范围k不大的时候，可以把数据分为k个桶，每个桶内数据都相同，无需排序，只需桶间排序即可。**比如高考分数查询系统，如何查询某个考生在省内的排名呢？**高考成绩750分，对一个省的50万考生来说，都处在这个分数内，因此可以将50万考生划分到750个桶内，这样只需要依次扫描每个桶，输出到一个数组中，就完成了50万考生的排序。
+
+计数排序的思想简单，但是算法还是需要巧妙构思的。理解起来也不是很容易，这里就不做具体介绍了。总的来说，**计数排序只能用在数据范围不大的场景中，如果数据范围 k 比要排序的数据 n 大很多，就不适合用计数排序了。而且，计数排序只能给非负整数排序，如果要排序的数据是其他类型的，要将其在不改变相对大小的情况下，转化为非负整数，比如全员乘以10或者加上10**
+
+### 3.基数排序 ###
+
+**如何对10万个手机号码进行排序？**
+
+手机号码有个特点，如果前面几位a比b大，那后面的无需再看。借助稳定排序算法，有个巧妙的实现思路。**按照高低位从后向前按位排序**，这样经过11次排序后，号码就都有序了。需要注意的是，按位排序必须是稳定的，否则排到后面高位的时候，低位的顺序乱了，就没意义了。而针对每个位进行排序，可以采用桶排序或者计数排序。手机号11位且每一位范围都不超过10，那么可以进行11次计数排序。进行k次桶/计数排序，总的时间复杂度是O(k\*n)，当k不大的时候，基数排序的时间复杂度就近似于O(n)。
+
+总的来说，**基数排序对要排序的数据是有要求的，需要可以分割出独立的“位”来比较，而且位之间有递进的关系，如果 a 数据的高位比 b 数据大，那剩下的低位就不用比较了。除此之外，每一位的数据范围不能太大，要可以用线性排序算法来排序，否则，基数排序的时间复杂度就无法做到 O(n) 了**
+
+
 # 8.排序优化
 
 # 9.二分查找
