--- a/数据结构与算法学习笔记.md
+++ b/数据结构与算法学习笔记.md
@@ -833,6 +833,29 @@ MD5(消息摘要算法)，SHA(安全哈希算法)，DES(数据加密标准)，AE
 
 # 13.二叉树
 
+关于树的几个概念：
+* 节点。父节点，子节点，兄弟节点，叶子节点
+* 树的高度。根节点的高度
+* 节点高度。节点到叶子节点的最长路径（边数）
+* 节点深度。根节点到该节点的边数
+* 节点层数。节点深度+1
+
+深度指的是到根节点的边数，自上而下；高度指的是到叶节点的边数，自下而上。
+
+### 1.二叉树 ###
+
+树的结构有多种，常用的还是二叉树，每个节点最多两个子节点。
+* 满二叉树。叶子节点全在最底层；除了叶子节点其他节点都有两个子节点
+* 完全二叉树。叶子节点都在最下面两层；最底层的叶子节点靠左排列；不是最底层的其他层节点个数都达到最大。简单来说完全二叉树就是满二叉树从右向左去掉连续几个叶子节点。
+
+**如何表示/存储二叉树？**
+
+万变不离其宗，存储二叉树，有基于指针/引用的链式存储和基于数组的顺序存储两种方式。
+* 常见的就是链式存储，每个节点有3个字段，1个数据域，1个左子节点指针，1个右子节点指针
+* 基于数组存储，就是把树从自上而下，从左到右将节点数据存在数组中。需要注意的是根节点存储在数组下标i为1的位置，左子节点存储在下标为 2 * i = 2 的位置，右子节点存储在下标为 2 * i + 1 = 3 的位置。以此类推，如果节点下标为i，则左子子节点下标为 2 * i,右子节点下标为 2 * i + 1,父节点下标为 i/2
+
+
+
 # 14.红黑树
 
 # 15.递归树
