--- a/数据结构与算法学习笔记.md
+++ b/数据结构与算法学习笔记.md
@@ -854,7 +854,59 @@ MD5(消息摘要算法)，SHA(安全哈希算法)，DES(数据加密标准)，AE
 * 常见的就是链式存储，每个节点有3个字段，1个数据域，1个左子节点指针，1个右子节点指针
 * 基于数组存储，就是把树从自上而下，从左到右将节点数据存在数组中。需要注意的是根节点存储在数组下标i为1的位置，左子节点存储在下标为 2 * i = 2 的位置，右子节点存储在下标为 2 * i + 1 = 3 的位置。以此类推，如果节点下标为i，则左子子节点下标为 2 * i,右子节点下标为 2 * i + 1,父节点下标为 i/2
 
+对于数组存储二叉树，如果某个节点缺失了，其对应的数组位置需要空出来，这样就会导致浪费内存。所以如果是完全二叉树，则用数组存储很节省内存，相比链式存储不需要额外存储指针。这就是为什么完全二叉树要求最底层叶子节点都靠左排列的原因。实际上，堆就是一种完全二叉树，常用的存储方式就是数组。
 
+### 2.二叉树的遍历 ###
+
+经典的3种遍历方法：
+* 前序遍历。先打印节点，再打印左子树，最后打印右子树
+* 中序遍历。先打印左子树，再打印节点，最后打印右子树
+* 后序遍历。先打印左子树，再打印右子树，最后打印节点
+
+所谓的前中后，指的是节点相比于左右子节点的遍历顺序。话不多说，最重要的也是最基本的，前中后序遍历代码如下：
+```
+def pre_order(tree):
+    """
+    二叉树前序遍历
+    :param tree:
+    :return:
+    """
+    if not tree:
+        return
+    print(tree.val, end=' ')
+    pre_order(tree.left)
+    pre_order(tree.right)
+
+
+def in_order(tree):
+    """
+    二叉树中序遍历
+    :param tree:
+    :return:
+    """
+    if not tree:
+        return
+    in_order(tree.left)
+    print(tree.val, end=' ')
+    in_order(tree.right)
+
+
+def post_order(tree):
+    """
+    二叉树后序遍历
+    :param tree:
+    :return:
+    """
+    if not tree:
+        return
+    post_order(tree.right)
+    post_order(tree.left)
+    print(tree.val, end=' ')
+```
+
+**二叉树遍历的时间复杂度是O(n)**。
+
+实际上除了前中后序遍历，还有一个按层遍历的方式。
 
 # 14.红黑树
 
