--- a/数据结构与算法学习笔记.md
+++ b/数据结构与算法学习笔记.md
@@ -858,7 +858,7 @@ MD5(消息摘要算法)，SHA(安全哈希算法)，DES(数据加密标准)，AE
 
 ### 2.二叉树的遍历 ###
 
-经典的3种遍历方法：
+**二叉树遍历的时间复杂度是O(n)**,经典的3种遍历方法：
 * 前序遍历。先打印节点，再打印左子树，最后打印右子树
 * 中序遍历。先打印左子树，再打印节点，最后打印右子树
 * 后序遍历。先打印左子树，再打印右子树，最后打印节点
@@ -904,9 +904,9 @@ def post_order(tree):
     print(tree.val, end=' ')
 ```
 
-**二叉树遍历的时间复杂度是O(n)**。
+### 3.二叉查找树 ###
 
-实际上除了前中后序遍历，还有一个按层遍历的方式。
+
 
 # 14.红黑树
 
