--- a/数据结构与算法学习笔记.md
+++ b/数据结构与算法学习笔记.md
@@ -906,6 +906,22 @@ def post_order(tree):
 
 ### 3.二叉查找树 ###
 
+问：与哈希表相比，二叉查找树的优点有哪些呢？
+答：
+
+二叉查找树最大的特点是，支持动态数据集合的快速插入、删除、查找操作。
+**二叉查找树要求，在树中任意一个节点，其左子树中的每个节点值，都要小于该节点的值，而右子树节点的值都大于该值。**
+
+**二叉查找树的查找**
+
+先取根节点，如果等于查找值，则返回；如果比查找值大，则在左子树中递归查找；如果比查找值小，则在右子树中递归查找。
+
+**二叉查找树的插入**
+
+类似与查找，从根节点开始比较节点值与插入值大小，直到找到一个空子节点位置插入。
+
+**二叉查找树的删除**
+
 
 
 # 14.红黑树
