--- a/数据结构与算法学习笔记.md
+++ b/数据结构与算法学习笔记.md
@@ -907,7 +907,13 @@ def post_order(tree):
 ### 3.二叉查找树 ###
 
 问：与哈希表相比，二叉查找树的优点有哪些呢？
-答：
+答：哈希表的插入、删除和查找操作时间复杂度可以达到极高的O(1)，但是有其局限性：
+* 哈希表中数据无序存储，而二叉查找树中序遍历在O(n)的时间复杂度内，即可输出有序序列
+* 哈希表扩容耗时多，遇到哈希冲突时性能不稳定，而平衡二叉查找树性能很稳定在O(logn)
+* 哈希表因为冲突的存在，实际查找速度并不一定就比O(logn)快，加上哈希函数的耗时，效率也不一定就比平衡二叉树效率高
+* 哈希表构造复杂，需要考虑哈希函数、冲突解决办法、扩容缩容策略、装填因子选择等，平衡二叉树只需要考虑平衡性即可，且这个问题解决方案稳定成熟
+
+
 
 二叉查找树最大的特点是，支持动态数据集合的快速插入、删除、查找操作。
 **二叉查找树要求，在树中任意一个节点，其左子树中的每个节点值，都要小于该节点的值，而右子树节点的值都大于该值。**
@@ -922,7 +928,22 @@ def post_order(tree):
 
 **二叉查找树的删除**
 
+删除有3种情况：
+* 待删除节点没有子节点。直接将父节点指向该节点的指针，置为null
+* 待删除节点只有1个子节点。将父节点指向该节点的指针，指向该节点的子节点
+* 待删除节点有2个子节点。查找到该节点右子树中的最小节点，然后替换掉该节点，最后删除最小节点
 
+另外也可以采取标记删除的方式，并不真正删除节点。这样会使删除操作类似于查找，比较简单，但是会浪费内存空间。
+
+**二叉查找树其他操作**
+
+快速查找最大节点、最小节点、前驱节点和后继节点。二叉查找树有一个重要的特性，就是**中序遍历可以输出有序的数据序列，时间复杂度是O(n)**，非常高效。
+
+二叉树的插入、删除、查找查找，都是基于查找，那么时间复杂度其实都是跟树高成正比，那么如何求一个n个节点的完全二叉树高度呢？借助于等比数列，可以算出来完全二叉树的高度小于logn。显然不平衡的二叉查找树，树高会增加，查找性能会降低，极端情况下退化成链表，时间复杂度为O(n)。**平衡二叉查找树**树高接近logn，其插入、删除和查找操作的时间复杂度也比较稳定是O(logn)。
+
+对于二叉查找树，如果存在相同键值的情况，该如何存储呢？
+* 每个节点不仅存储一个数据，通过链表和数组等数据结构，把相同值的数据都存在该节点上
+* 节点仍然只存储一个数据，将相同值的节点插入该节点的右子树，即把后插入的数据当作大于该节点的值来处理
 
 # 14.红黑树
 
