--- a/数据结构与算法学习笔记.md
+++ b/数据结构与算法学习笔记.md
@@ -937,7 +937,7 @@ def post_order(tree):
 
 **二叉查找树其他操作**
 
-快速查找最大节点、最小节点、前驱节点和后继节点。二叉查找树有一个重要的特性，就是**中序遍历可以输出有序的数据序列，时间复杂度是O(n)**，非常高效。
+快速查找最大节点、最小节点、前驱节点和后继节点。二叉查找树有一个重要的特性，就是**二叉查找树中序遍历可以输出有序的数据序列，时间复杂度是O(n)**，非常高效。
 
 二叉树的插入、删除、查找查找，都是基于查找，那么时间复杂度其实都是跟树高成正比，那么如何求一个n个节点的完全二叉树高度呢？借助于等比数列，可以算出来完全二叉树的高度小于logn。显然不平衡的二叉查找树，树高会增加，查找性能会降低，极端情况下退化成链表，时间复杂度为O(n)。**平衡二叉查找树**树高接近logn，其插入、删除和查找操作的时间复杂度也比较稳定是O(logn)。
 
@@ -946,6 +946,22 @@ def post_order(tree):
 * 节点仍然只存储一个数据，将相同值的节点插入该节点的右子树，即把后插入的数据当作大于该节点的值来处理
 
 # 14.红黑树
+
+二叉查找树是最常用的一种二叉树，支持快速插入、删除和查找，时间复杂度与树高成正比，理想情况下是O(logn)。不过在频繁的动态更新过程中，可能会出现树高过大的情况，进而导致操作效率降低。极端情况下退化为链表，时间复杂度退化为O(n)，因此需要一种平衡二叉查找树，保持动态更新时保持稳定的操作效率。
+
+### 1.平衡二叉查找树 ###
+
+**平衡二叉树**严格定义是，二叉树任意节点的左右子树高度差不能大于1。因此满二叉树、完全二叉树都是平衡二叉树，非完全二叉树也可能是平衡二叉树。**平衡二叉查找树**就是满足平衡二叉树和二叉查找树的特性。最先被发明的平衡二叉查找树是AVL树。但是很多平衡二叉查找树并没有严格遵循任一节点左右子树高度差不大于1的要求。比如**红黑树**，从根节点到各个叶子节点的最长路径，有可能会比最短路径大一倍。所以说平衡，就是让整棵树相对的平衡，不出现左右子树高度差过大的情况，这样就可以让树高更低一些，插入、删除和查找操作效率更高一些。
+
+### 2.红黑树 ###
+
+红黑树是一种不严格的平衡二叉查找树，但是确实平衡二叉查找树的典型代表，在工程中被广泛使用。**红黑树中的节点，一类被标记为红色，另一类被标记为黑色**，除此之外还需要满足如下要求：
+* 根节点是黑色的
+* 叶子节点都是黑色的空节点（null），即叶子节点不存数据
+* 相邻节点不能同时为红色，即红色节点被黑色节点隔开
+* 每个节点，从该节点到达它的可达叶子节点的所有路径，都包含相同数量的黑色节点
+
+
 
 # 15.递归树
 
