--- a/数据结构与算法学习笔记.md
+++ b/数据结构与算法学习笔记.md
@@ -955,23 +955,93 @@ def post_order(tree):
 
 ### 2.红黑树 ###
 
-红黑树是一种不严格的平衡二叉查找树，但是确实平衡二叉查找树的典型代表，在工程中被广泛使用。**红黑树中的节点，一类被标记为红色，另一类被标记为黑色**，除此之外还需要满足如下要求：
+红黑树是一种平衡二叉查找树。它是为了解决普通二叉查找树在数据更新的过程中，复杂度退化的问题而产生的。红黑树的高度近似 log2n，所以它是近似平衡，插入、删除、查找操作的时间复杂度都是 O(logn)。
+
+因为红黑树是一种性能非常稳定的二叉查找树，所以，在工程中，但凡是用到动态插入、删除、查找数据的场景，都可以用到它。不过，它实现起来比较复杂，如果自己写代码实现，难度会有些高，这个时候，我们其实更倾向用跳表来替代它。
+
+红黑树是一种不严格的平衡二叉查找树，但却是平衡二叉查找树的典型代表，在工程中被广泛使用。**红黑树中的节点，一类被标记为红色，另一类被标记为黑色**，除此之外还需要满足如下要求：
 * 根节点是黑色的
 * 叶子节点都是黑色的空节点（null），即叶子节点不存数据
 * 相邻节点不能同时为红色，即红色节点被黑色节点隔开
 * 每个节点，从该节点到达它的可达叶子节点的所有路径，都包含相同数量的黑色节点
 
+**AVL树**是一种高度平衡的二叉树，查找效率非常高，但是代价就是每次插入、删除都要做调整，更加复杂耗时，因此对于频繁插入、删除的数据，使用AVL树代价就过高了。红黑树只是近似平衡，所以维护平衡成本相比更低。
 
+# 15.堆
 
-# 15.递归树
+问：**快排时间复杂度和堆排序一样，甚至堆排序的时间复杂度更加稳定，但是实践中快排的性能往往比堆排序好，为什么？**
 
-# 16.堆
+答：第一个原因是堆排序的数据访问不如快排友好，快排的数据是顺序访问，而堆排序是跳序访问，这样对于CPU缓存是不友好的。第二个原因是相同数据场景下，堆排序交换数据次数多于快排。快排是基于比较的排序算法，因此交换次数不会超过数据的逆序度；堆排序建堆过程会打乱原本的数据顺序，导致有序度降低。
 
-# 17.图
+问：**有一个包含 10 亿个搜索关键词的日志文件，如何快速获取到 Top 10 最热门的搜索关键词呢？**
 
-# 18.深度优先搜索
+答：选用散列表。我们就顺序扫描这 10 亿个搜索关键词。当扫描到某个关键词时，我们去散列表中查询。如果存在，我们就将对应的次数加一；如果不存在，我们就将它插入到散列表，并记录次数为 1。以此类推，等遍历完这 10 亿个搜索关键词之后，散列表中就存储了不重复的搜索关键词以及出现的次数。然后，我们再根据前面讲的用堆求 Top K 的方法，建立一个大小为 10 的小顶堆，遍历散列表，依次取出每个搜索关键词及对应出现的次数，然后与堆顶的搜索关键词对比。如果出现次数比堆顶搜索关键词的次数多，那就删除堆顶的关键词，将这个出现次数更多的关键词加入到堆中。当遍历完整个散列表中的搜索关键词之后，堆中的搜索关键词就是出现次数最多的 Top 10 搜索关键词了。
 
-# 19.广度优先搜索
+10 亿的关键词还是很多的。我们假设 10 亿条搜索关键词中不重复的有 1 亿条，如果每个搜索关键词的平均长度是 50 个字节，那存储 1 亿个关键词起码需要 5GB 的内存空间，而散列表因为要避免频繁冲突，不会选择太大的装载因子，所以消耗的内存空间就更多了。**利用哈希算法**，创建 10 个空文件 00，01，02，……，09。我们遍历这 10 亿个关键词，并且通过某个哈希算法对其求哈希值，然后哈希值同 10 取模，得到的结果就是这个搜索关键词应该被分到的文件编号。对这 10 亿个关键词分片之后，每个文件都只有 1 亿的关键词，去除掉重复的，可能就只有 1000 万个，每个关键词平均 50 个字节，所以总的大小就是 500MB。针对每个包含 1 亿条搜索关键词的文件，利用散列表和堆，分别求出 Top 10，然后把这个 10 个 Top 10 放在一块，然后取这 100 个关键词中，出现次数最多的 10 个关键词，这就是这 10 亿数据中的 Top 10 最频繁的搜索关键词了。
+
+堆是一种特殊的树，堆排序是堆这种数据结构最经典的应用。堆排序是一种原地排序，时间复杂度为O(nlogn)。
+
+堆有2点要求：
+* 堆是一个完全二叉树
+* 堆中每个节点的值都必须大于等于（或者小于等于）左右节点的值
+
+如果堆顶元素值最大，则称为大顶堆；堆顶元素值最小，则为小顶堆。由于堆是完全二叉树，因此用数组来存储最合适。
+
+**堆插入元素**，时间复杂度O(logn)，采用从下往上的堆化方法，首先将元素插入数组最后一位，然后同父节点值进行比较，如果比父节点值大，则与父节点交换，然后继续和父节点相比，直到小于父节点的值。
+
+**删除堆顶元素**，时间复杂度O(logn)，采用自下而上的堆化方法，首先将数组最后一位元素放到堆顶，然后父子节点对比交换元素，直到满足堆的平衡。这样可以保证堆化的结果满足完全二叉树的特性，否则直接删除堆顶元素，然后子节点顶上去再进行父子节点比较交换，这样会出现数组空洞，不满足完全二叉树特性。
+
+### 堆排序 ###
+
+堆排序大致有2个步骤，建堆和排序
+
+**1.建堆**
+建堆的时间复杂度是O(n)。
+首先将数组原地建成一个堆，不借助其他数组。建堆的过程有2种思路，第一种是从前往后处理数组数据，每个数据入堆时，都是从下往上堆化。第二种是从后向前处理数据，每个数据自上而下堆化，比子节点小的与子节点进行交换。对于第二种思路，可以直接从非叶子节点开始，因为叶子节点不能向下比较了。这样实际堆化的数据是从数组下标n/2到1的数据，n/2+1到n的数据都是叶子节点。
+
+**2.排序**
+
+建堆结束后，数组中的数据，前一部分是按照大顶堆的特性来组织的，第一个元素就是堆顶，最大的元素。将堆顶元素与最后一个元素交换，则最大元素就到了下标为n的位置。类似于删除堆顶元素的操作，不断的堆化，最大的元素依次放入数组第n、n-1、...的位置，当堆中只剩下标为1的1个元素，排序完成。
+
+整个堆排序过程，都只需要个别临时存储空间，所以堆排序是原地排序算法。建堆时间复杂度为O(n),排序时间复杂度为O(nlogn)，整体时间复杂度是O(nlogn)。由于堆排序涉及交换堆顶和最后一个节点的操作，因此不是稳定的排序算法。
+
+### 堆的重要应用 ###
+
+**1.优先级队列**
+
+队列的特性是先进先出，优先级队列则是优先级高的先出队。用堆来实现优先级队列是最高效、最直接的。一个堆就可以看作一个优先级队列，堆顶元素就是最高优先级的元素。
+
+**（1）小顶堆合并有序小文件**
+
+我们将从小文件中取出来的字符串放入到小顶堆中，那堆顶的元素，也就是优先级队列队首的元素，就是最小的字符串。我们将这个字符串放入到大文件中，并将其从堆中删除。然后再从小文件中取出下一个字符串，放入到堆中。循环这个过程，就可以将 100 个小文件中的数据依次放入到大文件中。删除堆顶数据和往堆中插入数据的时间复杂度都是 O(logn)，n 表示堆中的数据个数，这里就是 100。相比数组的存储方式，高效了很多。
+
+**（2）小顶堆高性能定时器**
+
+假设我们有一个定时器，定时器中维护了很多定时任务，每个任务都设定了一个要触发执行的时间点。定时器每过一个很小的单位时间（比如 1 秒），就扫描一遍任务，看是否有任务到达设定的执行时间。如果到达了，就拿出来执行。但是，这样每过 1 秒就扫描一遍任务列表的做法比较低效，主要原因有两点：第一，任务的约定执行时间离当前时间可能还有很久，这样前面很多次扫描其实都是徒劳的；第二，每次都要扫描整个任务列表，如果任务列表很大的话，势必会比较耗时。
+
+用优先级队列来解决。按照任务设定的执行时间，将这些任务存储在优先级队列中，队列首部（也就是小顶堆的堆顶）存储的是最先执行的任务。拿队首任务的执行时间点，与当前时间点相减，得到一个时间间隔 T。定时器就可以设定在 T 秒之后，再来执行任务。从当前时间点到（T-1）秒这段时间里，定时器都不需要做任何事情。然后再计算新的队首任务的执行时间点与当前时间点的差值，把这个值作为定时器执行下一个任务需要等待的时间。这样，定时器既不用间隔 1 秒就轮询一次，也不用遍历整个任务列表，性能也就提高了。
+
+**2.Top K**
+
+求 Top K 的问题可以抽象成两类，一类是针对静态数据集合，也就是说数据集合事先确定，不会再变。另一类是针对动态数据集合，也就是说数据集合事先并不确定，有数据动态地加入到集合中。
+
+先随机取出N个数中的K个数，将这N个数构造为小顶堆，那么堆顶的数肯定就是这K个数中最小的数了，然后再将剩下的N-K个数与堆顶进行比较，如果大于堆顶，那么说明该数有机会成为TopK，就更新堆顶为该数，此时由于小顶堆的性质可能被破坏，就还需要调整堆；否则说明这个数最多只能成为Top K+1 th，因此就不用管它。然后就将下一个数与当前堆顶的数作比较，根据大小关系如上面所述方法进行操作，知道N-K个数都遍历完，此时还在堆中的K个数就是TopK了。
+
+针对动态数据求 Top K 就是实时 Top K,可以一直都维护一个 K 大小的小顶堆，当有数据被添加到集合中时，我们就拿它与堆顶的元素对比。如果比堆顶元素大，我们就把堆顶元素删除，并且将这个元素插入到堆中；如果比堆顶元素小，则不做处理。这样，无论任何时候需要查询当前的前 K 大数据，我们都可以里立刻返回给他。
+
+遍历数组需要 O(n) 的时间复杂度，一次堆化操作需要 O(logK) 的时间复杂度，所以最坏情况下，n 个元素都入堆一次，所以时间复杂度就是 O(nlogK)。
+
+**3.求中位数**
+
+我们需要维护两个堆，一个大顶堆，一个小顶堆。大顶堆中存储前半部分数据，小顶堆中存储后半部分数据，且小顶堆中的数据都大于大顶堆中的数据。这样**大顶堆中的堆顶元素就是我们要找的中位数**。约定如果n是偶数，从小到大排序，那前 n/2 个数据存储在大顶堆中，后 n/2 个数据存储在小顶堆中。如果n是奇数，大顶堆存储 n/2+1 个数据，小顶堆存储 n/2 个数据。**如果新加入的数据小于等于大顶堆的堆顶元素，我们就将这个新数据插入到大顶堆；如果新加入的数据大于等于小顶堆的堆顶元素，我们就将这个新数据插入到小顶堆。**
+
+可能出现两个堆中的数据个数不符合前面约定的情况，我们可以从一个堆中不停地将堆顶元素移动到另一个堆来调整满足约定。插入数据因为需要涉及堆化，所以时间复杂度变成了 O(logn)，但是求中位数我们只需要返回大顶堆的堆顶元素就可以了，所以时间复杂度就是 O(1)。
+
+# 16.图
+
+# 17.深度优先搜索
+
+# 18.广度优先搜索
 
 # 20.Trie树
 
