--- a/数据结构与算法学习笔记.md
+++ b/数据结构与算法学习笔记.md
@@ -979,7 +979,7 @@ def post_order(tree):
 
 10 亿的关键词还是很多的。我们假设 10 亿条搜索关键词中不重复的有 1 亿条，如果每个搜索关键词的平均长度是 50 个字节，那存储 1 亿个关键词起码需要 5GB 的内存空间，而散列表因为要避免频繁冲突，不会选择太大的装载因子，所以消耗的内存空间就更多了。**利用哈希算法**，创建 10 个空文件 00，01，02，……，09。我们遍历这 10 亿个关键词，并且通过某个哈希算法对其求哈希值，然后哈希值同 10 取模，得到的结果就是这个搜索关键词应该被分到的文件编号。对这 10 亿个关键词分片之后，每个文件都只有 1 亿的关键词，去除掉重复的，可能就只有 1000 万个，每个关键词平均 50 个字节，所以总的大小就是 500MB。针对每个包含 1 亿条搜索关键词的文件，利用散列表和堆，分别求出 Top 10，然后把这个 10 个 Top 10 放在一块，然后取这 100 个关键词中，出现次数最多的 10 个关键词，这就是这 10 亿数据中的 Top 10 最频繁的搜索关键词了。
 
-堆是一种特殊的树，堆排序是堆这种数据结构最经典的应用。堆排序是一种原地排序，时间复杂度为O(nlogn)。
+**堆是一种特殊的树，堆排序是堆这种数据结构最经典的应用。堆排序是一种原地排序，时间复杂度为O(nlogn)。**
 
 堆有2点要求：
 * 堆是一个完全二叉树
