--- a/数据结构与算法学习笔记.md
+++ b/数据结构与算法学习笔记.md
@@ -1039,9 +1039,31 @@ def post_order(tree):
 
 # 16.图
 
-# 17.深度优先搜索
+图是比树更复杂的非线性表结构，主要有如下概念：
+* 定点，图中的元素
+* 边，图中顶点间的连接关系
+* 度，根顶点连接的边数
+* 入度，有向图中指向顶点的边数
+* 出度，有向图中顶点指向其他顶点的边数
+* 带权图，边有权重
 
-# 18.广度优先搜索
+图的存储方式有2种，邻接矩阵和邻接表。
+
+**邻接矩阵**的底层是一个二维数组，但是在稀疏图，即顶点多，边少的情况下浪费存储空间。但是基于数组查询效率高，方便矩阵运算。
+
+**邻接表**有点类似哈希表，每个顶点对应一个链表，链表中存储该顶点连接的其他顶点。邻接表节省空间，但是耗费时间，因此可以对链表进行改造，选择哈希表或者跳表，红黑树等。
+
+# 17.深度优先搜索DFS
+
+深度优先和广度优先算法，都是基于图这种数据结构的。图的搜索算法本质上就是从一个顶点到另一个顶点的路径。
+DFS用的是回溯思想，非常适合用递归实现。换种说法，深度优先搜索是借助栈来实现的。在执行效率方面，深度优先和广度优先搜索的时间复杂度都是 O(E)，空间复杂度是 O(V)
+```
+
+````
+
+# 18.广度优先搜索BFS
+
+BFS通俗的理解就是，地毯式层层推进，从起始顶点开始，依次往外遍历。广度优先搜索需要借助队列来实现，遍历得到的路径就是，起始顶点到终止顶点的最短路径
 
 # 20.Trie树
 
